--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "angular-paginator": "^12.0.0",
     "crypto-js": "^4.2.0",
     "db-inventory-gestor": "file:",
+    "driver.js": "^1.3.1",
+    "file-saver": "^2.0.5",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "ngx-pagination": "^6.0.3",
