--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "driver.js": "^1.3.1",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.2",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "ngx-pagination": "^6.0.3",
