--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.20",
+    "electron": "^34.1.1",
     "electron-packager": "^17.1.2",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
