--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@canvasjs/angular-charts": "^1.2.0",
     "angular-paginator": "^12.0.0",
     "bootstrap": "^5.3.3",
+    "canvasjs": "^1.8.3",
     "crypto-js": "^4.2.0",
     "db-inventory-gestor": "file:",
     "driver.js": "^1.3.1",
