--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular-paginator": "^12.0.0",
     "bootstrap": "^5.3.3",
     "canvasjs": "^1.8.3",
+    "chart.js": "^4.4.7",
     "crypto-js": "^4.2.0",
     "db-inventory-gestor": "file:",
     "driver.js": "^1.3.1",
@@ -57,7 +58,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.4.2"
   }
 }
