18_02_2025 MEJORA DASHBOARD CON GRÁFICOS

--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,7 @@
               "src/styles.css"
             ],
             "scripts": [
+              "node_modules/datamaps/dist/datamaps.world.min.js",
               "node_modules/preline/preline.js"
             ]
           },
