--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "canvasjs": "^1.8.3",
     "chart.js": "^4.4.7",
     "crypto-js": "^4.2.0",
+    "datamaps": "^0.5.9",
     "db-inventory-gestor": "file:",
     "driver.js": "^1.3.1",
     "file-saver": "^2.0.5",
@@ -34,6 +35,7 @@
     "html2pdf.js": "^0.10.2",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "leaflet": "^1.9.4",
     "ngx-pagination": "^6.0.3",
     "preline": "^2.6.0",
     "rxjs": "~7.8.0",
@@ -48,6 +50,7 @@
     "@angular/compiler-cli": "^17.3.0",
     "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.16",
     "autoprefixer": "^10.4.20",
     "electron": "^34.1.1",
     "electron-packager": "^17.1.2",
