23_02_2025 DISEÑO EXPORTACION MEJORADO

--- a/angular.json
+++ b/angular.json
@@ -26,11 +26,13 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
               "node_modules/datamaps/dist/datamaps.world.min.js",
-              "node_modules/preline/preline.js"
+              "node_modules/preline/preline.js",
+               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ]
           },
           "configurations": {
