--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jspdf-autotable": "^3.8.4",
     "leaflet": "^1.9.4",
     "ngx-pagination": "^6.0.3",
+    "popper.js": "^1.16.1",
     "preline": "^2.6.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.14.5",
