--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.0",
+    "@angular/animations": "^17.3.12",
     "@angular/cdk": "^17.3.10",
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
@@ -37,6 +37,7 @@
     "jspdf-autotable": "^3.8.4",
     "leaflet": "^1.9.4",
     "ngx-pagination": "^6.0.3",
+    "ngx-toastr": "^19.0.0",
     "popper.js": "^1.16.1",
     "preline": "^2.6.0",
     "rxjs": "~7.8.0",
