--- a/angular.json
+++ b/angular.json
@@ -13,8 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist",
-
+            "outputPath": "dist/db-inventory-gestor",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
