--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "ng build --configuration=production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "postinstall": "node set-env.ts",
-    "electron": "ng build && electron ."
+    "postinstall": "node set-env.ts"
   },
   "private": true,
   "dependencies": {
